--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "portfolio",
   "version": "1.0.0",
   "scripts": {
-    "dev": "sass --watch src/scss:dist/css",
-    "build:css": "sass src/scss:dist/css --no-source-map --style=compressed",
-    "build:html": "node build-html.js",
-    "build": "npm run build:css && npm run build:html",
+    "dev": "sass --watch src/:dist/css",
+    "build:css": "sass src/:dist/css --no-source-map --style=compressed",
+    "build": "npm run build:css && npm run vite:build",
     "vite:dev": "vite",
     "vite:build": "vite build",
     "vite:preview": "vite preview"
   },
   "devDependencies": {
     "sass": "^1.79.0",
-    "vite": "^7.1.9"
+    "vite": "^7.1.9",
+    "vite-plugin-handlebars": "^2.0.0"
   }
 }
