--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "dev": "sass --watch src/:dist/css",
     "build:css": "sass src/:dist/css --no-source-map --style=compressed",
     "build": "npm run build:css && npm run vite:build",
-    "vite:dev": "vite",
+    "vite:dev": "vite && sass --watch src/:dist/css",
     "vite:build": "vite build",
     "vite:preview": "vite preview"
   },
   "devDependencies": {
+    "json-to-scss": "^1.6.2",
     "sass": "^1.79.0",
     "vite": "^7.1.9",
     "vite-plugin-handlebars": "^2.0.0"
